log
Fri Mar 20 06:05:05 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
8864187
Fri Mar 20 06:11:29 PM UTC 2026: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:82:15: error: ‘P3’ undeclared (first use in this function); did you mean ‘P2’?
   82 |          push(P3,top(P1));
      |               ^~
      |               P2
exercises.c:82:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:89:17: error: expected ‘;’ before ‘}’ token
   89 |          pop(P2)
      |                 ^
      |                 ;
   90 |       }
      |       ~          
exercises.c:79:12: error: unused variable ‘aux’ [-Werror=unused-variable]
   79 |    Stack  *aux = create_stack();
      |            ^~~
cc1: all warnings being treated as errors
641bba0
Fri Mar 20 06:12:18 PM UTC 2026: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:88:18: error: expected ‘;’ before ‘}’ token
   88 |          pop(aux)
      |                  ^
      |                  ;
   89 |       }
      |       ~           
5589525
Fri Mar 20 06:12:33 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
93e00b5
Fri Mar 20 06:14:18 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
974d05e
Sun Mar 22 07:27:04 PM UTC 2026: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|4
total_score: 10/70
5ab20a0
Sun Mar 22 07:27:36 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
45368bd
Sun Mar 22 07:30:38 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   68 |          suma+=actual;
      |              ^~
exercises.c:69:17: error: implicit declaration of function ‘nest’; did you mean ‘next’? [-Wimplicit-function-declaration]
   69 |          actual=nest(L);
      |                 ^~~~
      |                 next
exercises.c:69:16: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   69 |          actual=nest(L);
      |                ^
4b1637d
Sun Mar 22 07:32:02 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 30/70
49ae02e
Sun Mar 22 07:40:04 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:20: error: comparison between pointer and integer [-Werror]
   88 |          if(actual == elem)
      |                    ^~
cc1: all warnings being treated as errors
7c21a45
Sun Mar 22 07:40:36 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
ff2ecfc
Sun Mar 22 07:56:09 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
fae8568
Sun Mar 22 07:57:13 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e4da833
Mon Mar 23 12:58:36 AM UTC 2026: 
 exercises.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:31: error: expected expression before ‘char’
  134 |             char *puntero = (*char) malloc(sizeof(char));
      |                               ^~~~
exercises.c:134:37: error: expected ‘,’ or ‘;’ before ‘malloc’
  134 |             char *puntero = (*char) malloc(sizeof(char));
      |                                     ^~~~~~
exercises.c:135:25: error: expected ‘;’ before ‘push’
  135 |             *puntero = c
      |                         ^
      |                         ;
  136 |             push(aux,puntero);
      |             ~~~~         
exercises.c:144:24: error: comparison between pointer and integer [-Werror]
  144 |                   if(c == top(aux))
      |                        ^~
cc1: all warnings being treated as errors
73ce91e
Mon Mar 23 12:59:03 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:31: error: expected expression before ‘char’
  134 |             char *puntero = (*char) malloc(sizeof(char));
      |                               ^~~~
exercises.c:134:37: error: expected ‘,’ or ‘;’ before ‘malloc’
  134 |             char *puntero = (*char) malloc(sizeof(char));
      |                                     ^~~~~~
exercises.c:144:24: error: comparison between pointer and integer [-Werror]
  144 |                   if(c == top(aux))
      |                        ^~
cc1: all warnings being treated as errors
0ff1b4b
